[gd_scene load_steps=4 format=3 uid="uid://d1y7ktbu78bji"]

[ext_resource type="Texture2D" uid="uid://to531ymrhypu" path="res://Assets/Sprites/GUI/inventile_empty.png" id="1_ev8jb"]
[ext_resource type="Script" path="res://Scripts/GUI/inven_tile.gd" id="1_pkev6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtf4r"]
size = Vector2(18, 18)

[node name="InvenTile" type="Area2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_pkev6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mtf4r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ev8jb")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
